--- a/.config.toml
+++ b/.config.toml
@@ -1,6 +1,6 @@
-baseurl = ""
+baseurl = "https://example.org/"
 languageCode = "en-us"
-title = "Cyber Student"
+title = "Icarus"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
@@ -10,7 +10,7 @@ paginate = 10
 footnotereturnlinkcontents = "↩"
 theme = "hugo-icarus"
 # Comment the themesDir option if you use this theme in production
-# themesDir = "../.."
+themesDir = "../.."
 
 
 [permalinks]
@@ -19,20 +19,20 @@ theme = "hugo-icarus"
 
 [params]
     # Tell me who you are
-    author = "Dev Patel"
-    bio = "The best way to learn is to teach; hence, this blog."
-    location = "Tor Network"
-    site_description = "I enjoy learning about computers and networks. Every fortnight, I publish a post that goes over what I've learnt over that time in hopes that I can teach you something new."
-    copyright  = "Cyber Student"
-    avatar = "images/pfp.png"
+    author = "John Doe"
+    bio = "Blogger - Programmer - Gopher"
+    location = "Earth"
+    site_description = ""
+    copyright  = "Powered by [Hugo](//gohugo.io). Theme by [PPOffice](https://github.com/ppoffice)."
+    avatar = "css/images/avatar.png"
     # Enter your email address to display your Gravatar icon in the profile. If not set the theme
     # will fallback to the avatar.
-    # gravatar = ""
-    logo = "images/logo.png"
+    gravatar = "you@example.com"
+    logo = "css/images/logo.png"
     disable_mathjax = false # set to true to disable MathJax
 
     # define which types of pages should be shown. By default the type with the most regular pages
-    mainSections = ["posts"]
+    mainSections = ["post"]
 
     # Format dates with Go's time formatting
     date_format = "2006-01-02"
@@ -54,16 +54,6 @@ theme = "hugo-icarus"
 
 [[params.menu]]
     before = false
-    label = "About"
-    link = "about/"
-
-[[params.menu]]
-    before = false
-    label = "Writings"
-    link = "posts/"
-
-[[params.menu]]
-    before = false
     label  = "Tags"
     link   = "tags/"
 
@@ -73,15 +63,15 @@ theme = "hugo-icarus"
     link   = "categories/"
 
 # Enter a link for the follow button on the left
-# [params.profile]
-    # follow_button = "https://github.com/CyberStudentBlog/"
+[params.profile]
+    follow_button = "https://github.com/gohugoio"
 
 
 [social]
 # Add your social network accounts to the profile section on the left
 # by entering your username. The links to your account will be
 # created automatically.
-    github          = "CyberStudentBlog"
+    github          = "gohugoio"
     gitlab          = ""
     bitbucket       = ""
     jsfiddle        = ""
@@ -91,7 +81,7 @@ theme = "hugo-icarus"
     deviantart      = ""
     behance         = ""
     flickr          = ""
-    instagram       = "cyberstudent.blog"
+    instagram       = ""
     youtube         = ""
     vimeo           = ""
     vine            = ""
@@ -101,17 +91,14 @@ theme = "hugo-icarus"
     xing            = ""
     linkedin        = ""
     slideshare      = ""
-    stackoverflow   = "16799834"
+    stackoverflow   = ""
     reddit          = ""
     pinterest       = ""
     googleplus      = ""
     facebook        = ""
     facebook_admin  = ""
     twitter_domain  = ""
-    twitter         = ""
-
-[markup.goldmark.renderer]
-unsafe= true
+    twitter         = "gohugoio"
 
 # Enable and disable widgets for the right sidebar
 [params.widgets]
