--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/cactus"]
 	path = themes/cactus
 	url = https://github.com/monkeyWzr/hugo-theme-cactus.git
+[submodule "themes/hugo-icarus"]
+	path = themes/hugo-icarus
+	url = https://gitlab.com/toryanderson/hugo-icarus.git
+
