--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://cyberstudent.blog/"
 languageCode = "en-us"
 title = "Cyber Student"
 # Enable comments by entering your Disqus shortname
