--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ theme = "hugo-icarus"
     date_format = "2006-01-02"
 
     # Add custom assets with their paths relative to the static folder
-	custom_css = []
+	custom_css = ["style.css"]
 	custom_js  = []
 
 # Create custom menu entries by defining a label and a link for
