Added categories to all posts and made categories active again

--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ theme = "hugo-icarus"
 # and "Tags" / "Categories" after them.
 [[params.menu]]
     before = true
-    label  = "Home"
+    label  = ""
     link   = "/"
 
 [[params.menu]]
@@ -67,10 +67,10 @@ theme = "hugo-icarus"
     label  = "Tags"
     link   = "tags/"
 
-# [[params.menu]]
-#     before = false
-#     label  = "Categories"
-#     link   = "categories/"
+[[params.menu]]
+    before = false
+    label  = "Categories"
+    link   = "categories/"
 
 # Enter a link for the follow button on the left
 # [params.profile]
