--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ theme = "hugo-icarus"
     avatar = "images/pfp.png"
     # Enter your email address to display your Gravatar icon in the profile. If not set the theme
     # will fallback to the avatar.
-    # gravatar = ""
+    gravatar = ""
     logo = "images/logo.png"
     disable_mathjax = false # set to true to disable MathJax
 
@@ -73,8 +73,8 @@ theme = "hugo-icarus"
     link   = "categories/"
 
 # Enter a link for the follow button on the left
-# [params.profile]
-    # follow_button = "https://github.com/CyberStudentBlog/"
+[params.profile]
+    follow_button = "https://github.com/CyberStudentBlog/"
 
 
 [social]
